--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,49 @@
+# Dependencies
+node_modules/
+/dist/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage/
+
+# Production
+/build/
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw? 
-node_modules
+*.sw?
+
+# Backend specific
+target/
+*.class
+*.jar
+*.war
+*.ear
+*.log
+.settings/
+.project
+.classpath
+.factorypath
+
+# Frontend specific
+.cache/
+.parcel-cache/ 
