--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,24 +1,63 @@
 server:
   port: 8080
+  servlet:
+    context-path: /
+  tomcat:
+    uri-encoding: UTF-8
 
 spring:
+  profiles:
+    active: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hims?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/hims?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 65353804778
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 15
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: HimsHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db/medicine.sql
+      encoding: utf-8
+  web:
+    resources:
+      static-locations: classpath:/static/
+  mvc:
+    throw-exception-if-no-handler-found: true
   
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.hims.entity
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    cache-enabled: false
   global-config:
     db-config:
       logic-delete-field: deleted
       logic-delete-value: 1
       logic-not-delete-value: 0
+      id-type: auto
 
 jwt:
   secret: hims-secret-key
-  expiration: 86400000 # 24小时 
+  expiration: 86400000 # 24小时
+
+logging:
+  level:
+    root: info
+    com.hims: debug
+  file:
+    name: logs/hims.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 30 
